[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Daniel Pettersson <daniel.g.pettersson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
